--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to My Website</h1>
@@ -13,10 +15,47 @@
     <main>
         <p>This is my test website for moringa school</p>
         <a href='https://google.com'>google</a>
+        <div class='image'>
+            <img src='https://picsum.photos/seed/picsum/200/300' alt='my image'
+                title='my image showing on my webpage' />
+        </div>
+        <div class='tables'>
+            <table>
+                <tr>
+                    <th>country names</th>
+                    <th>number of people selected </th>
+                    <th>number of people who did not succeed</th>
+                </tr>
+                <tr>
+                    <td>kenya</td>
+                </tr>
+                <tr>
+                    <td>Uganda</td>
+                </tr>
+                <tr>
+                    <td>Tanzania</td>
+                </tr>
+                <tr>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td>60</td>
+                </tr>
+            </table>
+        </div>
+        <ul>
+            <li>everyone deserves a chance</li>
+            <li>yes we can </li>
+            <li>every person's life matter </li>
+        </ul>
     </main>
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
     <script src="/test/main.js"></script>
 </body>
+
 </html>
