adds table data and ol li links

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <li>yes we can </li>
             <li>every person's life matter </li>
         </ul>
+        <ol>
+            <li>love your neighbour</li>
+            <li>respect your elders</li>
+            <li>wash your hands daily after or before eating</li>
+        </ol>
     </main>
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
