--- a/index.html
+++ b/index.html
@@ -9,57 +9,60 @@
 </head>
 
 <body>
-    <header>
+    <header id="main-header">
         <h1>Welcome to My Website</h1>
     </header>
+
     <main>
-        <p>This is my test website for moringa school</p>
-        <a href='https://google.com'>google</a>
-        <div class='image'>
-            <img src='https://picsum.photos/seed/picsum/200/300' alt='my image'
-                title='my image showing on my webpage' />
+        <p>This is my test website for Moringa School</p>
+        <a href="https://google.com" target="_blank">Google</a>
+
+        <div class="image">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="My image" title="My image showing on my webpage" />
         </div>
-        <div class='tables'>
+
+        <div class="tables">
             <table>
                 <tr>
-                    <th>country names</th>
-                    <th>number of people selected </th>
-                    <th>number of people who did not succeed</th>
+                    <th>Country Names</th>
+                    <th>Number of People Selected</th>
+                    <th>Number of People Who Did Not Succeed</th>
                 </tr>
                 <tr>
-                    <td>kenya</td>
+                    <td>Kenya</td>
+                    <td>40</td>
+                    <td>10</td>
                 </tr>
                 <tr>
                     <td>Uganda</td>
+                    <td>50</td>
+                    <td>15</td>
                 </tr>
                 <tr>
                     <td>Tanzania</td>
-                </tr>
-                <tr>
-                    <td>40</td>
-                </tr>
-                <tr>
-                    <td>50</td>
-                </tr>
-                <tr>
                     <td>60</td>
+                    <td>20</td>
                 </tr>
             </table>
         </div>
-        <ul>
-            <li>everyone deserves a chance</li>
-            <li>yes we can </li>
-            <li>every person's life matter </li>
+
+        <ul class="perspective-questions">
+            <li>Everyone deserves a chance</li>
+            <li>Yes, we can</li>
+            <li>Every person's life matters</li>
         </ul>
+
         <ol>
-            <li>love your neighbour</li>
-            <li>respect your elders</li>
-            <li>wash your hands daily after or before eating</li>
+            <li>Love your neighbor</li>
+            <li>Respect your elders</li>
+            <li>Wash your hands daily after or before eating</li>
         </ol>
     </main>
+
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
+
     <script src="/test/main.js"></script>
 </body>
 
